<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Cappuccino</string>
  <string name="chats">Chats</string>
  <string name="attention">Attention</string>
  <string name="machines">Machines</string>
  <string name="settings">Settings</string>
</resources>
